Fix part of #29310: secondary point caches for cloth did not get steps set to correct default, was 10 when supposed to be 1.